test/expected/explain_main_fi_i.out
explain int main( int )
                  ^
19: error: a single parameter for main() must be "void"
